[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/TitleBar.gd" type="Script" id=1]
[ext_resource path="res://Main/X509CertificateGenerator.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="X509CertificateGenerator" type="Node"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.423529, 0.0470588, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_right = 445.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 14.45
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/VBoxContainer2"]
margin_right = 445.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Self-signed X509 Certificate generator."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 445.0
margin_bottom = 58.0

[node name="PathInput" type="LineEdit" parent="Control/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 362.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "user://Certificate/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialogButton" type="Button" parent="Control/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 366.0
margin_right = 445.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change dir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateCertificate" type="Button" parent="Control/HBoxContainer/VBoxContainer2"]
margin_top = 78.0
margin_right = 445.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create Certificate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 449.0
margin_right = 480.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="Control/HBoxContainer/VBoxContainer"]
margin_right = 31.0
margin_bottom = 20.0
color = Color( 0.498039, 0.27451, 0.27451, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedSlider" type="VSlider" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 31.0
margin_bottom = 160.0
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 3.0
step = 0.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -300.0
margin_bottom = 76.0

[node name="PropsButton" type="Button" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -20.0
margin_right = -14.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Big props to Game Develpoment Center's video  # 7"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -22.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Control/TitleBar" to="Control/TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer2/HBoxContainer/FileDialogButton" to="." method="_on_FileDialogButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer2/CreateCertificate" to="." method="_on_CreateCertificate_pressed"]
[connection signal="color_changed" from="Control/HBoxContainer/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/VBoxContainer/SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
[connection signal="pressed" from="Control/PropsButton" to="." method="_on_PropsButton_pressed"]
[connection signal="pressed" from="Control/QuitButton" to="Control/TitleBar" method="_on_QuitButton_pressed"]
